# extract-rust-apis

./: Cargo.toml  README.md
scripts/composing/: etl.sql  list.sql
scripts/duckdb_ingest/: 00_schema.sql  01_read_source.sql  02_process_type.sql  03_process_fn.sql  04_buildup.sql  05_output.sql  etl.sal
src/: compile.rs  core.rs  lib.rs  main.rs  print.rs  support.rs
