[package]
name = "fndump"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer] 
rustc_private = true

[dependencies]
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
